fix: align input fields with delete button for app settings
align input fields with delete button for new security tokens added in application settings

--- a/src/react/components/common/common.scss
+++ b/src/react/components/common/common.scss
@@ -9,7 +9,6 @@
 }
 
 .form-row {
-  align-items: center;
   margin: 0;
 
   .object-wrapper {
@@ -91,7 +90,6 @@
 
 .loading-container { 
   display: flex;
-  align-items: center;
 }
 
 .loading-description {
